# swapdoodle-utils

./: .gitignore  Cargo.toml  README.md  bpk1.py  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml
libdoodle/: Cargo.toml
libdoodle-wasm/: Cargo.toml
libdoodle-wasm/src/: lib.rs
libdoodle/src/: bits.rs  error.rs  lzss.rs  sheet.rs
lzss/: Cargo.toml
lzss/src/: lib.rs
parsing/: Cargo.toml
parsing-wasm/: Cargo.toml
parsing-wasm/src/: lib.rs
parsing/src/: bits.rs  color.rs  lib.rs  mii_data.rs  read.rs  sheet.rs
parsing/src/bpk1/: letter.rs  mod.rs  stationery.rs
src/: App.svelte  font.css  main.css  main.ts
src/components/: BlobImage.svelte  Card.svelte  Dialog.svelte  Doodle.svelte  DropTarget.svelte  HexView.svelte  L4Image.svelte  Stationery.svelte  Toast.svelte
src/components/MenuBar/: MenuButton.svelte
src/lib/: dialog.svelte.ts  files.svelte.ts  toast.svelte.ts  utils.ts
src/lib/bpk1/: index.ts  lzss.ts  lzss.wasm  miidata.ts
src/lib/bpk1/lzss/: lzss_wasm.d.ts  lzss_wasm.js  lzss_wasm_bg.wasm  lzss_wasm_bg.wasm.d.ts
src/lib/libdoodle/: index.ts  libdoodle.svelte.ts
src/lib/parsing/: parsing.ts
src/pages/: OpenFile.svelte  ViewFile.svelte
src/types/@jamescoyle/: svelte-icon.d.ts
src/ui/: Doodle.svelte  OpenFile.svelte  Stationery.svelte  Toast.svelte  ViewFile.svelte
src/viewer/: ViewFile.svelte
src/viewer/blocks/: COLSLT1.svelte  MIISTD1.svelte  SHEET1.svelte  STATIN1.svelte  THUMB2.svelte  Unknown.svelte
src/viewer/components/: HexView.svelte
