[package]
name = "parsing"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", default-features = false, features = ["serde"] }
rust_lzss = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
chrono = { version = "0.4.40", default-features = false, features = [
    "alloc",
    "clock",
] }
