[package]
name = "parsing"
version = "0.1.0"
edition = "2024"

[features]
default = []
wasm = ["tsify"]
tsify = ["dep:tsify", "wasm-bindgen"]
wasm-bindgen = ["dep:wasm-bindgen"]

[dependencies]
chrono = { version = "0.4.40", default-features = false, features = ["serde"] }
rust_lzss = "0.1.1"
serde = { version = "1.0.219", features = ["derive"] }
tsify = { version = "0.5.5", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
crc = "3.2.1"

[dev-dependencies]
chrono = { version = "0.4.40", default-features = false, features = [
    "alloc",
    "clock",
] }
